<resources>
    <string name="app_name">"Material QR Tools"</string>
    <string name="navigation_drawer_open">"Open drawer"</string>
    <string name="navigation_drawer_close">"Close drawer"</string>
    <string name="listqr">"Analyzed"</string>
    <string name="scan_name">"Scanner"</string>
    <string name="action_settings">"Settings"</string>
    <string name="faq">"FAQ"</string>
    <string name="action_help">"Help and info…"</string>
    <string name="crea">"Create"</string>
    <string name="write">"Write something!"</string>
    <string name="qr">"Here the QR!"</string>
    <string name="scan">"Analyze!"</string>
    <string name="msgerror">"Enter a message to be encoded!"</string>
    <string name="version">"Version 2.2"</string>
    <string name="created">"Created by: franci22"</string>
    <string name="save">"Save"</string>
    <string name="other">"Other"</string>
    <string name="share">"Share"</string>
    <string name="share_intent">"Choose what to share with:"</string>
    <string name="error_create">"Enter a message to be encoded"</string>
    <string name="funzionalitadisp">"The functionality will be available soon!"</string>
    <string name="delete">"Delete"</string>
    <string name="ricreate">"Want to recreate the QR?"</string>
    <string name="yes">"Yes"</string>
    <string name="chose">"Choose an action:"</string>
    <string name="conferma">"Confirm"</string>
    <string name="finish">"Finished"</string>
    <string name="tutorial">"Tutorial"</string>
    <string name="imagecreated">"The image is saved in the folder: "</string>
    <string name="saveonlist">"Save the QR created the list of QR"</string>
    <string name="createdbyuser">"Created using the function creates"</string>
    <string name="qst_close">"Confirms the exit from the app"</string>
    <string name="closeapp_content">"Are you sure you want to close the app?"</string>
    <string name="no">"No"</string>
    <string name="open_web_off">"Website"</string>
    <string name="share_link_text">"Download Material QR Tools!"</string>
    <string name="scan_group">"Group Scan"</string>
    <string name="delete_list_scan">"Delete the list of scanned QR"</string>
    <string name="ricreaqr">"Recreate QR"</string>
    <string name="listdeleted">"The list has been cleared!"</string>
    <string name="statusbarkitkat">"Colour statusbar (only KitKat)"</string>
    <string name="modifyonrestart">"The changes will take effect when you restart the app"</string>
    <string name="app_theme_select">"Choose a theme"</string>
    <string name="blue">"Blue"</string>
    <string name="green">"Green"</string>
    <string name="red">"Red"</string>
    <string name="sendemail">"Want to send an email to this address?"</string>
    <string name="sendedbyapp">"Sent using the app Material QR Tools"</string>
    <string name="selectmailsender">"Choose what to send with the mail:"</string>
    <string name="lstEmpty">"QR List is empty!"</string>
    <string-array name="items_delete">
        <item>Copy</item>
        <item>Delete</item>
        <item>Share</item>
        <item>Recreate QR</item>
    </string-array>
    <string-array name="app_theme">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>
    <string name="errormkdir">Error creation directory /QRTools</string>
    <string-array name="items_mail_qrcreate">
        <item>Save as PNG</item>
        <item>Send an Email</item>
        <item>Share</item>
    </string-array>
    <string name="saveaspng">Save as PNG</string>
    <string name="sendanemail">Send an Email</string>
    <string-array name="items_link_qrcreate">
        <item>Save as PNG</item>
        <item>Open this link</item>
        <item>Share</item>
    </string-array>
    <string name="openlink">Open this link</string>
    <string-array name="typecode" translatable="false">
        <item>QR Code</item>
        <item>Data Matrix</item>
    </string-array>
    <string name="copy">Copy</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="attention">Attention</string>
    <string name="tutorial_qst">Thank you for downloading my app. Do you want open Material QR Tools\' website?</string>
    <string name="open">Open</string>
</resources>