<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_create" android:icon="@drawable/ic_add"
            android:title="@string/crea" android:checked="true" />
        <item android:id="@+id/nav_listqr" android:icon="@drawable/ic_list"
            android:title="@string/listqr" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item android:id="@+id/nav_help" android:icon="@drawable/ic_info"
                android:title="@string/action_help" android:checkable="true" />
        </menu>
    </item>

</menu>